--- a/src/components/common/Menu.css
+++ b/src/components/common/Menu.css
@@ -1,6 +1,6 @@
 .menu-container {
   position: relative;
-  padding: 12px;
+  padding: 10px; 
   border-radius: 5px;
   cursor: pointer;
 }
@@ -17,8 +17,9 @@
   gap: 10px;
 }
 
-.popup {
+.menu-container.popup {
   background-color: var(--gray-color-4);
+  border-radius: 50px;
 }
 
 .menu-popup {
@@ -31,7 +32,7 @@
 
 .menu-popup.popup-position-bottom-left {
   top: 42px;
-  right: 0px;
+  right: -5px;
 }
 
 .menu-popup.popup-position-bottom-right {
@@ -54,7 +55,7 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-  padding: 10px;
+  padding: 10px 5px;
   cursor: pointer;
   white-space: nowrap;
 }
@@ -76,7 +77,7 @@
 }
 
 .menu-option.selected {
-  background-color: var(--primary-color-light);
+  background-color: var(--gray-color-4);
 }
 
 .menu-option.header {
