--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -7,13 +7,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 40px 10px;
+  padding: 15px 40px;
+}
+.navbar-container-homepage {
+  background-color: var(--primary-color-background);
 }
 
 .xsmall .navbar-container,
 .small .navbar-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -24,6 +26,17 @@
 .navbar-group {
   display: flex;
   align-items: center;
+}
+.navbar-group.left {
+  justify-content: flex-start;
+}
+.navbar-group.mid {
+  justify-content: flex-start;
+  margin-right: auto; 
+}
+.navbar-group.right {
+  width: 300px;
+  justify-content: flex-end;
 }
 
 .xsmall .navbar-group,
@@ -41,7 +54,50 @@
   align-items: flex-end;
   display: flex;
 }
-
+.navbar-button {
+  display: flex;
+  align-items: center;
+  height: 20px;
+  padding: 0 5px;
+  border-left: 1px solid var(--gray-color-3);
+  border-right: 1px solid var(--gray-color-3);
+}
+.nav-link-login {
+  color: var(--dark-color);
+  font-weight: 400;
+  width: 60px;
+  padding: 0;
+}
+.nav-btn-demo {
+  margin: 0 10px;
+}
+.nav-btn-demo:hover {
+  color: var(--primary-color) !important;
+  background: var(--primary-color-background) !important;
+}
+.nav-btn-dashboard {
+  margin: 0 5px;
+  height: 38px;
+}
 .navbar-profile {
-  margin-left: 20px;
+
+}
+.navbar-profile-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: 1.5px solid var(--gray-color-3);
+  border-radius: 50px;
+  padding: 0 5px;
+  margin-left: 10px;
+}
+
+.navbar-links {
+  display: flex;
+  padding-left: 50px;
+  gap: 10px;
+}
+.navbar-link {
+  color: var(--dark-color);
+  font-weight: 400;
 }
