--- a/src/components/pages/dashboard/Dashboard.css
+++ b/src/components/pages/dashboard/Dashboard.css
@@ -72,7 +72,6 @@
   gap: 20px;
   flex-flow: wrap;
   overflow-y: auto;
-  padding-bottom: 40px;
 }
 
 .dashboard-panel.no-application {
@@ -109,8 +108,8 @@
 .pagination-container {
   display: flex;
   justify-content: center;
-  margin-top: auto;
-  padding: 20px 0 35px 0;
+  margin-top: 0;
+  padding: 40px 0;
   position: relative;
   bottom: 0;
 }
