--- a/src/components/pages/home/Features.css
+++ b/src/components/pages/home/Features.css
@@ -28,7 +28,7 @@
 .hf-section {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 40px 0;
   width: 1150px;
@@ -48,7 +48,7 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-  padding-left: 35px;
+  width: 540px;
 }
 .hf-subsection-item {
   display: flex;
