--- a/src/components/pages/home/DataShowCase.css
+++ b/src/components/pages/home/DataShowCase.css
@@ -2,24 +2,33 @@
   display: flex;
   flex-direction: column;
   background-color: var(--gray-color-4);
-  width: 1150px;
+  width: 1200px;
   gap: 40px;
   padding: 120px 0 160px;
 }
-
+.xsmall .home-data-showcase,
+.small .home-data-showcase {
+  width: 80%;
+  padding: 80px 40px;
+  padding-left: 25%;
+  gap: 0;
+}
+.xsmall .hd-section,
+.small .hd-section {
+  flex-direction: column;
+  padding-bottom: 0;
+}
 .hd-section {
   display: flex;
   flex-direction: row;
   gap: 40px;
+  padding: 0;
 }
+
 
 .hd-title {
-  padding: 0;
+  padding: 0 !important;
   color: var(--dark-gray-color);
-}
-
-.hd-section {
-  padding: 0;
 }
 
 .hd-text-block {
