--- a/src/components/pages/home/Features.css
+++ b/src/components/pages/home/Features.css
@@ -31,17 +31,19 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px 0;
-  width: 1150px;
+  width: 1200px;
 }
 .xsmall .hf-section,
 .small .hf-section {
   flex-direction: column;
   align-items: center;
-  padding-bottom: 0;
+  padding-top: 0;
 }
 .xsmall .hf-section svg,
 .small .hf-section svg {
-  width: 100%;
+  width: 20%;
+  align-self: center;
+  padding-bottom: 50px;
 }
 
 .hf-subsection {
@@ -49,14 +51,16 @@
   flex-direction: column;
   justify-content: left;
   width: 540px;
+  gap: 20px;
+}
+.small .hf-subsection {
+  gap: 0;
 }
 .hf-subsection-item {
   display: flex;
   flex-direction: row;
   align-items: center;
-
   gap: 10px;
-  padding: 20px 0;
 }
 .hf-subsection-item svg {
   min-width: 50px;
