--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -66,18 +66,17 @@
   margin: 20px 0 40px;
 }
 
-/* .xsmall .landing-page-title,
+.xsmall .landing-page-title,
 .small .landing-page-title {
-  width: 80%;
+  width: 60%;
 }
-
 .large .landing-page-title {
-  width: 30%;
+  width: 40%;
 }
 
 .cn.large .landing-page-title {
-  width: 25%;
-} */
+  width: 30%;
+}
 
 .buildings {
   width: 30%;
@@ -115,20 +114,29 @@
 
 .home-video {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+.home-video-player{
+  padding: 60px 0;
+  width: 850px;
+  height: 495px;
+}
+.xsmall .home-video-player,
+.small .home-video-player {
+  padding: 30px 0;
+  width: 450px;
+  height: 260px;
+}
+.large .home-video-player {
   padding: 80px 0;
-}
-
-.xsmall .home-video,
-.small .home-video {
-  width: 250px;
-  height: 140px;
-}
+  width: 1200px;
+  height: 700px;
+} 
 
 .home-video-player iframe {
-  width: 1000px;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   border-radius: 12px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
