--- a/src/components/pages/home/Solutions.css
+++ b/src/components/pages/home/Solutions.css
@@ -52,13 +52,13 @@
   width: 100%;
 }
 .home-solutions-section.icon-left .home-solutions-icon {
-  order: 1; 
+  order: 1;
 }
 .home-solutions-section.icon-left .home-solutions-section-description {
   order: 2;
 }
 .home-solutions-section.icon-right .home-solutions-icon {
-  order: 2; 
+  order: 2;
 }
 .home-solutions-section.icon-right .home-solutions-section-description {
   order: 1;
@@ -66,14 +66,14 @@
 
 .xsmall .home-solutions-section .home-solutions-icon,
 .small .home-solutions-section .home-solutions-icon {
-  order: 1; 
+  order: 1;
   height: 260px;
 }
 .xsmall .home-solutions-section .home-solutions-section-description,
 .small .home-solutions-section .home-solutions-section-description {
-  order: 2; 
+  order: 2;
   align-items: center;
-  gap: 20px
+  gap: 20px;
 }
 
 .home-solutions-section-description {
