--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,6 +2,7 @@
   position: fixed;
   box-sizing: border-box;
   width: 100%;
+  height: 70px;
   background-color: white;
   z-index: 999;
   display: flex;
