--- a/src/components/pages/lawyerProfile/LawyerProfilePage.css
+++ b/src/components/pages/lawyerProfile/LawyerProfilePage.css
@@ -1,20 +1,3 @@
-.lawyer-profile-content {
-  padding: 40px;
-  padding-bottom: 100px;
-  background-color: var(--white-color);
-  border-radius: 10px;
-  overflow-y: auto;
-}
-
-.xsmall .form-content-form,
-.small .form-content-form {
-  padding: 20px;
-}
-
-.form-content-form > div {
-  margin-bottom: 40px;
-}
-
 .lawyer-profile-container {
   display: flex;
   flex-direction: column;
@@ -22,10 +5,6 @@
   height: 100%;
   padding: 20px 40px;
   /* min-width: 1000px; */
-}
-
-.lawyer-profile-container h2 {
-  margin-bottom: 20px;
 }
 
 .lawyer-profile-header {
@@ -36,6 +15,58 @@
   padding: 20px 40px;
 }
 
-.lawyer-profile-header h2 {
-  margin-bottom: 0;
+
+.lawyer-profile-content {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  padding-bottom: 100px;
+  background-color: var(--white-color);
+  border-radius: 10px;
+  overflow-y: auto;
+}
+
+.lawyer-profile-group {
+  padding-bottom: 20px;
+}
+.lawyer-profile-group.disabled {
+  opacity: 0.5;
+  pointer-events: none; /* This disables interaction with the group */
+}
+
+.lawyer-profile-subTitle {
+  display: flex;
+  flex-direction: row;
+  height: 20px;
+  align-items: center;
+}
+
+.lawyer-profile-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.lawyer-profile-display {
+  display: flex;
+  flex-direction: row;
+  padding: 5px 0;
+  gap: 20px;
+}
+.lawyer-profile-edit {
+  display: none;
+  flex-direction: column;
+}
+.lawyer-profile-edit.isEditing {
+  display: flex;
+  flex-direction: column;
+}
+.lawyer-profile-edit-input {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 5px 0 15px;
+}
+.lawyer-profile-edit-save {
+  width: 80px;
+  margin-bottom: 15px;
 }
