--- a/src/components/common/Fonts.css
+++ b/src/components/common/Fonts.css
@@ -65,6 +65,10 @@
   font-weight: 600;
 }
 
+.text.margin-bottom-20 {
+  margin-bottom: 20px;
+}
+
 .text.margin-bottom-10 {
   margin-bottom: 10px;
 }
