--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -46,6 +46,7 @@
   --shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
   --shadow-green: 0 6px 16px 0 rgba(39, 174, 96, 0.2), 0 3px 6px -4px rgba(39, 174, 96, 0.12),
     0 9px 28px 8px rgba(39, 174, 96, 0.05);
+  --border: 1px solid #f2f2f2;
 }
 
 .single-line {
