--- a/src/components/form/parts/SectionHeader.css
+++ b/src/components/form/parts/SectionHeader.css
@@ -1,7 +1,12 @@
-.removable-section-header {
+.section-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
   background-color: var(--primary-color-light);
+}
+
+.section-header-control {
+  display: flex;
+  gap: 1rem;
 }
