--- a/src/components/common/Fonts.css
+++ b/src/components/common/Fonts.css
@@ -97,6 +97,10 @@
   font-size: var(--inline-placeholder);
 }
 
+.text.no-wrap {
+  text-wrap: nowrap;
+}
+
 .qtag {
   background-color: var(--gray-color-4);
   border: 1px solid var(--gray-color-3);
