--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,10 +8,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 40px;
+  padding: 40px;
 }
 .navbar-container-homepage {
-  background-color: var(--primary-color-background);
+  background-color: var(--white-color);
 }
 
 .xsmall .navbar-container,
