--- a/src/components/pages/home/Features.css
+++ b/src/components/pages/home/Features.css
@@ -14,15 +14,30 @@
   background-color: var(--primary-color-trans1);
   color: black;
 }
-
+.hf-text-block-title {
+  width: 600px;
+  padding: 0 40px;
+}
+.xsmall .hf-text-block-title,
+.small .hf-text-block-title {
+  width: 80vw;
+  max-width: 360px;
+  padding: 20px;
+}
 .hf-text-block {
-  padding: 0 0 20px 20px;
+  padding: 0 0 20px 40px;
+  width: 500px;
 }
 .hf-text-block.text-block-description {
   min-height: 60px;
 }
 .text-block-title.h3 {
   color: black !important;
+}
+.xsmall .hf-text-block,
+.small .hf-text-block {
+  padding: 0 0 20px 20px;
+  width: 80vw;
 }
 
 .hf-section {
@@ -32,6 +47,7 @@
   align-items: center;
   padding: 40px 0;
   width: 1200px;
+  gap: 40px;
 }
 .xsmall .hf-section,
 .small .hf-section {
@@ -41,9 +57,9 @@
 }
 .xsmall .hf-section svg,
 .small .hf-section svg {
-  width: 20%;
+  width: 50px;
   align-self: center;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
 }
 
 .hf-subsection {
@@ -53,14 +69,15 @@
   width: 540px;
   gap: 20px;
 }
-.small .hf-subsection {
+.xsmall.small .hf-subsection {
   gap: 0;
 }
 .hf-subsection-item {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 10px;
+  justify-content: center;
+  padding: 0 20px;
 }
 .hf-subsection-item svg {
   min-width: 50px;
@@ -70,4 +87,9 @@
 .hf-text-block.text-block-description {
   font-size: 16px;
   padding-left: 0 !important;
+}
+.xsmall .hf-text-block.text-block-description,
+.small .hf-text-block.text-block-description {
+  font-size: 14px;
+  width: 100%;
 }
