--- a/src/components/pages/home/Solutions.css
+++ b/src/components/pages/home/Solutions.css
@@ -38,7 +38,8 @@
   justify-content: space-between;
   align-items: center;
 
-  width: 1200px;
+  width: 80%;
+  max-width: 1200px;
   padding: 40px 0;
 }
 .xsmall .home-solutions-section,
@@ -56,12 +57,14 @@
 }
 .home-solutions-section.icon-left .home-solutions-section-description {
   order: 2;
+  padding-left: 60px;
 }
 .home-solutions-section.icon-right .home-solutions-icon {
   order: 2;
 }
 .home-solutions-section.icon-right .home-solutions-section-description {
   order: 1;
+  padding-right: 60px;
 }
 
 .xsmall .home-solutions-section .home-solutions-icon,
@@ -74,6 +77,10 @@
   order: 2;
   align-items: center;
   gap: 20px;
+  padding: 40px 0;
+}
+.solutions-checklist-item > .text.normal {
+  text-align: left;
 }
 
 .home-solutions-section-description {
@@ -81,8 +88,6 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-
-  padding: 20px 0;
   width: 550px;
   gap: 30px;
 }
@@ -102,6 +107,12 @@
   flex-direction: column;
   justify-content: left;
   padding: 0;
+  width: 40vw;
+  max-width: 500px;
+}
+.xsmall .solutions-checklist,
+.small .solutions-checklist {
+  width: 90vw;
 }
 .solutions-checklist-item {
   display: flex;
@@ -112,7 +123,13 @@
   gap: 10px;
   margin-bottom: 10px;
 }
-
+.xsmall .solutions-checklist-item,
+.small .solutions-checklist-item {
+  padding-left: 10vw;
+}
+.solutions-checklist-item > span {
+  min-width: 20px;
+}
 .supported-immigration {
   padding: 80px 0;
   width: 50%;
