--- a/src/components/pages/lawyerProfile/LawyerProfilePage.css
+++ b/src/components/pages/lawyerProfile/LawyerProfilePage.css
@@ -12,13 +12,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
+  padding-bottom: 20px;
 }
 
 .lawyer-profile-content {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 30px 40px;
   padding-bottom: 100px;
   background-color: var(--white-color);
   border-radius: 10px;
@@ -47,9 +47,8 @@
 
 .lawyer-profile-display {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   padding: 5px 0;
-  gap: 20px;
 }
 .lawyer-profile-edit {
   display: none;
