Update the NA for multi file uploader

--- a/src/components/common/Fonts.css
+++ b/src/components/common/Fonts.css
@@ -56,6 +56,11 @@
   font-size: var(--font-size-p3);
 }
 
+.text.upload {
+  font-size: var(--font-size-upload);
+  line-height: 18px;
+}
+
 .text.normal {
   font-size: var(--font-size-p2);
 }
