--- a/src/components/form/fields/MultiFileUploader.css
+++ b/src/components/form/fields/MultiFileUploader.css
@@ -27,3 +27,50 @@
 .upload-item-actions:hover {
   opacity: 1;
 }
+
+.uploader.ant-upload-wrapper.ant-upload-wrapper.ant-upload-picture-card-wrapper {
+  width: fit-content;
+}
+
+.uploader .ant-upload.ant-upload-select {
+  margin: 0 !important; /** Remove ant design margin, don't use !important unless necessary */
+}
+
+.uploader-upload {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.uploader-upload > svg,
+.uploader-upload > span {
+  width: 14px;
+  height: 14px;
+}
+
+.uploader-disabled {
+  width: 100px;
+  height: 100px;
+  background-color: var(--upload-btn-background);
+  border: var(--upload-btn-border);
+  border-radius: 12px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.uploader-disabled svg {
+  fill: var(--gray-color-2);
+}
+
+.miltifile-uploader-top {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
