--- a/src/components/pages/singlePage/PrivacyPolicy.css
+++ b/src/components/pages/singlePage/PrivacyPolicy.css
@@ -14,7 +14,7 @@
   fill: var(--primary-color);
 }
 
-table {
+.privacy-policy-table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
