--- a/src/components/pages/casestatus/CaseProgressCard.css
+++ b/src/components/pages/casestatus/CaseProgressCard.css
@@ -14,7 +14,6 @@ body {
   background-color: #fafafa;
   margin-top: 16px;
   overflow-y: auto;
-  max-height: 200px;
 }
 
 .progress-content {
@@ -30,6 +29,10 @@ body {
 }
 .ant-steps-item-title {
   line-height: 24px !important;
+}
+
+.progress-card-header {
+  padding: 20px 0;
 }
 
 .progress-header {
@@ -97,4 +100,8 @@ body {
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   width: calc(100% - 28px);
+}
+
+.progress-card-steps {
+  margin: 40px 0;
 }
