--- a/src/components/pages/casestatus/ProgressSection.css
+++ b/src/components/pages/casestatus/ProgressSection.css
@@ -12,7 +12,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  cursor: pointer;
   width: 100%;
 }
 
@@ -26,6 +25,11 @@
 .progress-item .go-complete {
   color: #fa8c16;
   cursor: pointer;
+}
+
+.progress-item .icon-container {
+  display: flex;
+  align-items: center;
 }
 
 .custom-percentage-tag {
@@ -56,7 +60,6 @@
 
 .expanded-card .ant-card {
   background-color: #fff;
-  border: 1px solid #d9d9d9;
   border-radius: 8px;
   width: calc(100% - 28px);
 }
@@ -68,17 +71,14 @@
 .progress-item-content {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .progress-item-actions {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
-
-.custom-card {
-  background-color: white;
-}
-
 .card-content {
   display: flex;
   align-items: center;
