--- a/src/components/pages/home/Service.css
+++ b/src/components/pages/home/Service.css
@@ -22,7 +22,7 @@
 }
 .xsmall .hs-text-block,
 .small .hs-text-block {
-  width: 80%;
+  width: 75%;
 }
 .text-block-title.h3 {
   color: black !important;
@@ -46,9 +46,12 @@
   align-items: center;
   padding-bottom: 0;
 }
-
 .xsmall .hs-section > div .small .hs-section > div {
   width: 20%;
+}
+.small .hs-section > svg,
+.xsmall .hs-section > svg {
+  width: 90vw;
 }
 .hs-subsection {
   display: flex;
@@ -64,13 +67,17 @@
   gap: 10px;
   height: 120px;
 }
+.small .hs-subsection-item,
+.xsmall .hs-subsection-item {
+  gap: 0;
+}
 .hs-subsection-item svg {
   min-width: 50px;
   padding-bottom: 30px;
 }
 .xsmall .hs-subsection-item svg,
 .small .hs-subsection-item svg {
-  padding-left: 20px;
+  padding-left: 40px;
 }
 
 .hs-text-block.text-block-description {
