Privacy and Term of service bug fix

--- a/src/components/pages/singlePage/TermsOfService.css
+++ b/src/components/pages/singlePage/TermsOfService.css
@@ -4,6 +4,7 @@
 
 .terms-collapse {
   margin: 20px -20px;
+  overflow-y: auto;
 }
 
 .terms-outlined svg {
@@ -12,4 +13,8 @@
 
 .terms-outlined.active svg {
   fill: var(--primary-color);
+}
+
+.terms-collapse > .ant-collapse-item > .ant-collapse-header {
+  color: var(--dark-gray-color);
 }
