--- a/src/components/pages/singlePage/PrivacyPolicy.css
+++ b/src/components/pages/singlePage/PrivacyPolicy.css
@@ -25,3 +25,7 @@
   border: 1px solid var(--gray-color-3);
   padding: 8px;
 }
+
+.privacy-collapse > .ant-collapse-item > .ant-collapse-header {
+  color: var(--dark-gray-color);
+}
