--- a/src/components/pages/dashboard/Dashboard.css
+++ b/src/components/pages/dashboard/Dashboard.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   background-color: var(--gray-color-4);
-  height: 100%;
+  height: 90vh;
   padding: 20px 40px;
   justify-content: center;
   margin: 0 auto;
   max-width: 1390px;
+  overflow-y: auto;
 }
 
 .dashboard h2 {
@@ -109,7 +110,7 @@
   display: flex;
   justify-content: center;
   margin-top: 0;
-  padding: 40px 0;
+  padding: 20px 0;
   position: relative;
   bottom: 0;
 }
