--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -22,7 +22,7 @@
 }
 
 .navbar-container.form-nav {
-  padding: 15px 10px 0 0;
+  padding: 0;
 }
 
 .navbar-group {
@@ -119,8 +119,7 @@
   margin: 0 5px;
   height: 38px;
 }
-.navbar-profile {
-}
+
 .navbar-profile-button {
   display: flex;
   flex-direction: row;
