--- a/src/components/pages/casestatus/CaseProgressCard.css
+++ b/src/components/pages/casestatus/CaseProgressCard.css
@@ -9,9 +9,8 @@ body {
   display: flex;
   align-items: center;
   padding: 16px;
-  border: 1px solid #f0f0f0;
   border-radius: 4px;
-  background-color: #fafafa;
+  background-color: #f8f8f8;
   margin-top: 16px;
   overflow-y: auto;
 }
@@ -98,4 +97,24 @@ body {
 
 .progress-card-steps {
   margin: 40px 0;
+}
+
+.progress-card-step {
+  position: relative;
+}
+
+.progress-card-step .ant-steps-item-icon,
+.progress-card-step .ant-steps-item-content {
+  cursor: pointer;
+}
+
+.active-step-indicator {
+  position: absolute;
+  font-size: 60px;
+  bottom: -82px;
+  left: 25px;
+}
+
+.active-step-indicator svg {
+  fill: #f8f8f8;
 }
