Landing page and pop up menu UI fix

--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -63,11 +63,11 @@
 
 .first-home-button:hover {
   color: var(--white-color) !important;
-  background: linear-gradient(135deg, #04befe, #27ae60) !important;
+  background: linear-gradient(135deg, #0468fe, #04befe) !important;
 }
 
 .home-section.center.first {
-  padding: 40px 0 80px;
+  padding: 120px 0 80px;
 }
 .xsmall .home-section.center.first,
 .small .home-section.center.first {
