--- a/src/components/pages/dashboard/Dashboard.css
+++ b/src/components/pages/dashboard/Dashboard.css
@@ -4,7 +4,7 @@
   background-color: var(--gray-color-4);
   height: 90vh;
   padding: 20px 40px;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0 auto;
   max-width: 1390px;
   overflow-y: auto;
