--- a/src/components/modals/ModalView.css
+++ b/src/components/modals/ModalView.css
@@ -18,6 +18,8 @@
   width: 100%;
   box-sizing: border-box;
   max-width: 700px;
+  max-height: 80%;
+  overflow-y: auto;
   border-radius: 10px;
 }
 
